--- a/src/template.html
+++ b/src/template.html
@@ -37,14 +37,15 @@
             <p id="errorMsg"></p>
             <form method="dialog" id="addTodoForm">
                 <label for="title">Title</label>
-                <input type="text" id="title" placeholder="Clean?">
+                <input type="text" id="title" placeholder="Clean the house">
                 <label for="description">Description</label>
-                <textarea id="description"></textarea> 
+                <textarea id="description" placeholder="Vacuum even the smallest little gap, then wash floors."></textarea> 
                 <label for="dueDate">Due date</label>
                 <input type="date" id="dueDate">
                 <label for="project">Does it belong to an existing project?</label>
                 <select id="project" name="project">
                 </select>
+                <label for="priority" id="label-priority">Priority</label>
                 <fieldset id="priority">
                     <input type="radio" id="low" name="priority">
                     <label for="low" id="label-low">LOW</label> 
