Add more query selectors

--- a/src/template.html
+++ b/src/template.html
@@ -55,7 +55,7 @@
                     <label for="high" id="label-high">HIGH</label> 
                 </fieldset>
                 <div class="form-buttons">
-                    <button type="submit">Submit</button>
+                    <button type="submit" id="dialog-submit-btn">Submit</button>
                     <button type="submit" id="dialog-close-btn">Close</button>
                 </div>
                 
